# frename

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  mingw-toolchain.cmake
include/: cli.h  fs_utils.h  int_utils.h  log.h  string_utils.h  types.h
man/: frename.1
src/: cli.cpp  fs_utils.cpp  int_utils.cpp  log.cpp  main.cpp  string_utils.cpp
